# tasty-musicgen

./: README.md  pyproject.toml
src/tasty_musicgen/: __init__.py  __main__.py  cli.py  gui.py  model.py  utils.py
src/tasty_musicgen/gui/: intro.py  utils.py
src/tasty_musicgen/gui/pages/: 1_text_to_audio.py  2_audio_conditioning.py  3_audio_continuation.py  4_tasty_music.py  4_teoria.py  5_teoria.py
