[project]
name = "tasty-musicgen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matteo", email = "spartacus990@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "audiocraft>=1.1.0",
    "rich>=14.0.0",
    "torch>=2.6.0",
]

[project.scripts]
tasty-musicgen = "tasty_musicgen:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
