[project]
name = "tasty-musicgen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matteo", email = "spartacus990@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "audiocraft>=1.1.0",
    "click>=8.1.8",
    "rich>=14.0.0",
    "streamlit>=1.44.1",
    "torch>=2.6.0",
]

[project.scripts]
tasty-musicgen = "tasty_musicgen.cli:main"
batch = "tasty_musicgen.cli:batch"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
